{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "400c2d2f-14e8-4b39-88ad-2a860b688e3e",
            "actions": [
                {
                    "name": "MeleeAttack",
                    "type": "Button",
                    "id": "82754275-4c2a-408b-b69d-0f6aacb8b231",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "8da818ae-023b-46bc-a8ea-2639f8ef2125",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "0d53b353-abe1-496f-baaa-f76bafde2258",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interactive",
                    "type": "Button",
                    "id": "62e79bde-68e0-4595-a083-abc81b29ad81",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=5)"
                },
                {
                    "name": "Spell1",
                    "type": "Button",
                    "id": "bfdf56b8-024e-4023-bab3-963540548eb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Spell2",
                    "type": "Button",
                    "id": "0cf8afd1-6deb-4781-8ccb-0fa62bc8dc74",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Walk",
                    "type": "Button",
                    "id": "d2796715-57b6-41c8-afd2-a0528bf31a1b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a870dab3-1a06-4b4d-8a57-4b2e5bf817d1",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "All Control Schemes;Gamepad",
                    "action": "MeleeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff09fc07-2304-448d-9883-4895419600a9",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "All Control Schemes;Gamepad",
                    "action": "MeleeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19d6bd27-d00c-4e25-8598-dc6aa9677e87",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "All Control Schemes;PC",
                    "action": "MeleeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5e0367e-d337-4c29-8580-cf30d51e5813",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "All Control Schemes;Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "ec5d9e72-6646-449b-81b2-f23d4ed62095",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bbe5335f-857e-49a7-829c-cfbb99f8ef9a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "All Control Schemes;PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "84fd1b20-f997-4939-b288-c97c139f75f0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "All Control Schemes;PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3f299c6e-7485-4369-9e64-645b1926876f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "All Control Schemes;PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a6635b90-6fbe-407d-89ef-7852b6a8de99",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "All Control Schemes;PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "149f4c5c-0288-4b31-a002-ba4825caf62f",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "All Control Schemes;Gamepad",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a6cba0a-622a-4dfc-a422-d63c2d8d9a3c",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "All Control Schemes;Gamepad",
                    "action": "Interactive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "707c10e6-94a3-4ac8-b3d2-98413ed02cd5",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "All Control Schemes;PC",
                    "action": "Interactive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "049d76c0-1a6a-4eb5-afc2-2ca5d4f12d9c",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "All Control Schemes;Gamepad",
                    "action": "Spell1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "282295f3-72f3-4dea-bbbc-73470de0c010",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "All Control Schemes;PC",
                    "action": "Spell1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c75d8b63-3411-406f-a537-8e9de1725a6b",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "All Control Schemes;Gamepad",
                    "action": "Spell2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70c9dd8b-13d3-4017-93f3-42eba2694545",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "All Control Schemes;PC",
                    "action": "Spell2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c45deba-4a27-4e6b-b1fc-27399a040782",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f78e3ee8-4392-45fc-999f-661cee01d8c1",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "All Control Schemes",
            "bindingGroup": "All Control Schemes",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}